nginx-index.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-index
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: parkhyeonwoo/nginx-index:v1.0
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  type: NodePort
  clusterIP: 10.100.100.200
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30200
